hphp/hack/test/typecheck/classname/enum.php.like_types.exp
File "enum.php", line 9, characters 7-7:
Enums must be int or string or arraykey, not ~classname<~C> (Typing[4024])
